--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
     <script type="text/javascript" src="script_3.js"></script>
     <script type="text/javascript" src="script_4.js"></script>
     <script type="text/javascript" src="script_5.js"></script>
+    <script type="text/javascript" src="script_6.js"></script>
+    <script type="text/javascript" src="script_7.js"></script>
     <title>Document</title>
 </head>
 <body>
     <script>
 
         console.log("exercice 1 :");
-
+        sayHello();
+        
         console.log("exercice 2 :");
+        calculeFactoriel();
 
         console.log("exercice 3 :");
+        pyramide();
 
         console.log("exercice 4 :");
+        bornIn70();
+        arrayMan();
+        ageToday();
+        alphDesc();
 
         console.log("exercice 5 :");
         asBeenRented();
@@ -28,7 +37,14 @@
         lessPopular();
         findMe();
         deletId();
-        orderDesc()
+        orderDesc();
+
+        console.log("exercice 6 :");
+        readArn('CCGUCGUUGCGCUACAGC');
+        readArn('CCUCGCCGGUACUUCUCG');
+
+        console.log("exercice 7 :");
+        askMan();
 
     </script>
 </body>
